included the screen shots for the example run of the soccer simulation, still needs some text

--- a/doc/users/gettingstarted.tex
+++ b/doc/users/gettingstarted.tex
@@ -165,7 +165,46 @@ Add your install prefix if it isn't already there, save and close.
 
 \section{An Example of a Simulation Run}
 
-%Take the user through the steps of running the soccer simulation and show what to expect (screen shots)
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{fig/startup}
+\caption{View of the soccer simulation after the simulator has just been started.}
+\label{fig:startup}
+\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{fig/press3}
+\caption{Change the view by pressing '3' on the keyboard.}
+\label{fig:press3}
+\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{fig/agentconnect}
+\caption{An agent connected to the server.}
+\label{fig:agentconnect}
+\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{fig/movearound}
+\caption{Moving around on the field using the arrow keys, PgUp, PgDown, and the mouse (with left mouse button pressed).}
+\label{fig:movearound}
+\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{fig/presskickoff}
+\caption{Press 'k' to start the game. The play mode will switch to 'KickOff' and the time will advance.}
+\label{fig:presskickoff}
+\end{center}
+\end{figure}
+
 
 %I think for the initial outline of the manual it's easier to just focus on either app/simpark app/monitorspark  or rsgedit.
 
