- describe example run of soccer simulation

--- a/doc/users/introduction.tex
+++ b/doc/users/introduction.tex
@@ -58,9 +58,7 @@ details contained in a set of plugins (see \cite{OR05}).
 
 \section{About this Manual}
 
-\section{Reader's Guide to the Manual}
-
-%Purpose, contact persons, how to contribute
+% add contact and download location
 
 This manual describes the SimSpark simulator. Like the simulator
 itself it is subject to constant change in an ongoing development
@@ -78,6 +76,11 @@ idea on how to improve the manual, as well as proofread or rewrite a
 section of the manual.
 
 The latest manual can be downloaded at <URL>.
+
+\section{Reader's Guide to the Manual}
+
+%Purpose, contact persons, how to contribute
+
 
 %%% Local Variables: 
 %%% mode: latex
