added title page

--- a/doc/users/definitions.tex
+++ b/doc/users/definitions.tex
@@ -90,6 +90,46 @@
 
 \makeatletter
 \renewcommand{\@seccntformat}[1]{\llap{\csname the#1\endcsname\hskip1em}}
+
+\renewcommand{\maketitle}{\pagestyle{empty}%
+  \begin{titlepage}%
+       \vspace{5cm}
+        \hspace{-5cm}%
+        \includegraphics{fig/header}\hfill%
+         \vspace*{0.1cm}
+         \hspace*{-3cm}%  
+         \begin{minipage}[t]{0.5\linewidth}
+         		\textsf{\Large
+         			\flushleft{%
+				\textit{Edited by:}\\%
+				Joschka Boedecker\\%
+				Klaus Dorer\\%
+				Markus Rollmann\\%
+				Yuan Xu\\%
+			}
+		}
+	\end{minipage}
+	\hspace*{6cm}
+	\begin{minipage}[t]{0.5\linewidth}
+	\textsf{\Large\flushright{Version 1.0}}
+         \end{minipage}
+	
+	\vspace{-1.5cm}
+		
+	\begin{minipage}[t]{\linewidth}
+	\hspace*{1.5cm}
+	\includegraphics[width=16.5cm]{fig/logo}
+	\end{minipage}
+	
+	\vspace*{-0.25cm}
+	\hspace*{-3cm}%
+	\begin{minipage}[b]{3cm}
+	\textsf{\Large\flushleft{March 2008}}
+        	\end{minipage}
+	
+  \end{titlepage}%
+}
+
 \makeatother
 \pagestyle{fancy}
 \lhead{}
