--- a/doc/users/user-manual.tex
+++ b/doc/users/user-manual.tex
@@ -7,6 +7,10 @@
 
 \begin{document}
 
+\maketitle
+\cleardoublepage
+\pagestyle{fancy}
+
 \pagenumbering{roman} %% Roman numerals for page numbers for first pages
 
 \setlength{\headheight}{14pt}
