- add missing chapter labels and sketch readers guide

--- a/doc/users/agentspark.tex
+++ b/doc/users/agentspark.tex
@@ -1,4 +1,8 @@
 \chapter{Agentspark}
+\label{cha:agentspark}
+
+This chapter introduces AgentSpark, the demo agent implementation
+available for SimSpark.
 
 \section{Behaviors}
 
