--- a/doc/users/gettingstarted.tex
+++ b/doc/users/gettingstarted.tex
@@ -1,5 +1,6 @@
 
  \chapter{Getting Started}
+\label{cha:getstarted}
 
 \section{Download and Installation Instructions}
 \label{section:install}
@@ -235,7 +236,7 @@ a separate window and display the simulated scene, please see figure
 
 After the monitor started you are able to use the mouse and keyboard
 to navigate the scene. Please refer to chapter
-\ref{chapter:monitorspark} for a complete list of the available key bindings. 
+\ref{cha:monitorspark} for a complete list of the available key bindings. 
 
 You can use the numbers of the keypad to navigate to different
 positions on the playing field. The view after pressing \texttt{3} is
