--- a/doc/users/introduction.tex
+++ b/doc/users/introduction.tex
@@ -79,8 +79,43 @@ The latest manual can be downloaded at <URL>.
 
 \section{Reader's Guide to the Manual}
 
-%Purpose, contact persons, how to contribute
+% \ref{cha:overview}
 
+% short introduction to the system and its components; 
+% software architecture view:different libraries take take care of different aspects of the simulator
+% component view: server, monitor, logplayer, agent, available simulations and robot models
+
+
+% \ref{cha:getstarted}
+% helps to get the user started; guide through a typcial install process; 
+% gives an example simulation run
+
+
+% \ref{cha:simspark}
+% detailed information about the messages that are sent from the
+% server to the agent (perceptors) and vice versa (effectors)
+
+
+% \ref{cha:monitorspark}
+% an overview about the available monitor and log
+% player setups available  their configuration and usage
+
+
+% \ref{cha:agentspark}
+% explain demo agent; how to configure different behaviors
+
+
+% \ref{cha:simulations}
+% introduce available simulations for SimSpark; describe soccer simulation in more detail
+
+
+% \ref{cha:robots}
+% describe available robot models that are available for SimSpark; describe the currenr SoccerBot in more detail
+
+
+% \ref{cha:resources}
+% where to download the server, how to contact the developer community and report bugs; 
+% links to papers and thesis works related to SimSpark
 
 %%% Local Variables: 
 %%% mode: latex
