--- a/doc/users/monitorspark.tex
+++ b/doc/users/monitorspark.tex
@@ -1,4 +1,8 @@
 \chapter{Monitorspark}
+\label{cha:monitorspark}
+
+This chapter gives an overview about the available monitor and log
+player setups available in SimSpark, their configuration and usage.
 
 \section{Internal Monitor}
 
