--- a/doc/users/simulations.tex
+++ b/doc/users/simulations.tex
@@ -1,6 +1,9 @@
 \chapter{Simulations}
 \label{cha:simulations}
 
+This chapter is about the different simulations available with
+SimSpark. In particular the soccer simulation is described in detail.
+
 \section{The Soccer Simulation}
 \label{sec:soccersimulation}
 
