--- a/doc/users/overview.tex
+++ b/doc/users/overview.tex
@@ -1,4 +1,5 @@
  \chapter{System Overview}
+\label{cha:overview}
 
 %Briefly introduce the system and its components. Later chapters go into more detail.
 
