slight changes on the title page, added olive green logo

--- a/doc/users/definitions.tex
+++ b/doc/users/definitions.tex
@@ -94,10 +94,10 @@
 \renewcommand{\maketitle}{\pagestyle{empty}%
   \begin{titlepage}%
        \vspace{5cm}
-        \hspace{-5cm}%
+        \hspace{-4.5cm}%
         \includegraphics{fig/header}\hfill%
          \vspace*{0.1cm}
-         \hspace*{-3cm}%  
+         \hspace*{-2.5cm}%  
          \begin{minipage}[t]{0.5\linewidth}
          		\textsf{\Large
          			\flushleft{%
@@ -114,11 +114,11 @@
 	\textsf{\Large\flushright{Version 1.0}}
          \end{minipage}
 	
-	\vspace{-1.5cm}
+	\vspace{-1.75cm}
 		
 	\begin{minipage}[t]{\linewidth}
-	\hspace*{1.5cm}
-	\includegraphics[width=16.5cm]{fig/logo}
+	\hspace*{2.25cm}
+	\includegraphics[width=16cm]{fig/simsparklogo}
 	\end{minipage}
 	
 	\vspace*{-0.25cm}
