--- a/doc/devel/zeitgeist.tex
+++ b/doc/devel/zeitgeist.tex
@@ -1,5 +1,20 @@
 \chapter{Zeitgeist application framework}
 
+The Zeitgeist library provides two major features. It implements a
+mechanism to work with class objects in C++. A class object is just a
+factory of class instances. In addition to this mechanism, it also
+implements an object hierarchy. This hierarchy is essentially a
+virtual file system, where the 'directories' and 'files' are instances
+of C++ classes. These two concepts are quite intertwined with each
+other, as class objects can also live inside the object
+hierarchy. Objects within the hierarchy are identified with a unique
+name. On top of these two features, the Zeitgeist library also
+provides three very important 'built-in' services. Each basic service
+is usually represented by a 'server' class in our terminology. An
+instance of such a class provides the service to other parts of the
+system. The three services built into the Zeitgeist library are the
+LogServer, the FileServer, and the ScriptServer.
+
 \section{Writing a class object for a C++ class}
 \label{sec:classobj}
 
