correct the manual's path

--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,7 @@
  the community, the documents about the server are available now.
 
 * Documents:
- - the user's manual in doc/user
+ - the user's manual in doc/users
  - the server developer's manual in doc/devel
  - there are also some useful information at SimSpark Wiki[1]
 
