--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 rcssserver3d-0.5.7 README
 
-Please see doc/user/user-manual.pdf.
+Please see doc/users/user-manual.pdf.
 
 *Note* The README is somewhat outdated and should be fixed after the
  competition in Atlanta. The main difference is that the SimSpark
