--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-25  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::SimControlThread):
+	(SimulationServer::RunMultiThreaded):
+	- Enabled protection for PrePhysicsUpdate()
+
 2008-03-24  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* lib/oxygen/simulationserver/netmessage.cpp:
