--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-26  Joschka Boedecker  <jboedeck@uni-koblenz.de>
+
+	* lib/oxygen/physicsserver/odewrapper.h:
+	- define a dummy for uint32 before including ode.h and
+	  undefine after the include to prevent conflict with
+	  typedef in a system (Mac OS X 10.5) header (thanks Markus).
+
 2008-03-26  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* utility/wxutil/Makefile.am:
